apps/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      # init container which creates directories for subpaths
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.3.0.10514-ls311 # {"$imagepolicy": "flux-system:radarr"}
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: media
              mountPath: /data/media
              subPath: media/
            - name: config
              mountPath: /data/usenet
              subPath: usenet/
            - name: config
              mountPath: /config
              subPath: radarr/config
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: you-are-a-pirate-pvc
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
