apps/radarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host("radarr.homelab")
      kind: Rule
      services:
        - name: radarr
          port: 8989
